tenzir/tests/format_strings/backslash_eoi.txt
error: backslash is not followed by escape sequence
 --> format_strings/backslash_eoi.tql:4:12
  |
4 | from {x: f"\
  |            ^ 
  |
